--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,104 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  border: none;
+  background: #4e75ff;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  transition: background 0.3s ease;
+}
+
+button:hover {
+  background: #6c8cff;
+}
+
+form {
+  display: flex;
+  gap: 8px;
+  margin: 0 auto;
+  justify-content: center;
+  margin-top: 24px;
+}
+
+input {
+  border-radius: 4px;
+  width: 272px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding-left: 8px;
+  font-family: 'Montserrat', sans-serif;
+  transition: border 0.3s ease;
+}
+
+input::placeholder {
+  color: #808080;
+}
+
+input:hover {
+  border: 1px solid #000;
+}
+
+input:active {
+  border: 1px solid #4e75ff;
+}
+
+.gallery {
+  display: grid;
+  /* Используем CSS Grid для создания решетки */
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 16px;
+  align-items: center;
+  justify-items: center;
+  padding-top: 15px;
+}
+
+.image-container {
+  box-shadow: 5px 5px #000000;
+  position: relative;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.image-caption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 10px;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 9999;
+  animation-delay: 250ms;
+}
