--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-/**
+/* /**
   |============================
   | include css partials with
   | default @import url()
@@ -8,7 +8,7 @@
 @import url('./vite-promo.css');
 @import url('./header.css');
 
-:root {
+.root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -44,7 +44,19 @@ button:hover {
   background: #6c8cff;
 }
 
-form {
+input {
+  width: 272px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 8px 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.form {
   display: flex;
   gap: 8px;
   margin: 0 auto;
@@ -52,75 +64,54 @@ form {
   margin-top: 24px;
 }
 
-input {
-  border-radius: 4px;
-  width: 272px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-  padding-left: 8px;
-  font-family: 'Montserrat', sans-serif;
-  transition: border 0.3s ease;
-}
-
-input::placeholder {
-  color: #808080;
-}
-
-input:hover {
-  border: 1px solid #000;
-}
-
-input:active {
-  border: 1px solid #4e75ff;
+.loader {
+  transform: rotateZ(45deg);
+  perspective: 1000px;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  color: #474444;
 }
 
 .gallery {
-  display: grid;
-  /* Используем CSS Grid для создания решетки */
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 16px;
-  align-items: center;
-  justify-items: center;
-  padding-top: 15px;
-}
-
-.image-container {
-  box-shadow: 5px 5px #000000;
-  position: relative;
-  overflow: hidden;
-  box-sizing: border-box;
-}
-
-.image-container img {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-}
-
-.image-caption {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 10px;
-}
-
-.loader {
+  padding: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
-  z-index: 9999;
-  animation-delay: 250ms;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 32px;
+}
+
+.photo-card {
+  padding: 0;
+  border: 1px solid #808080;
+  width: calc((100% - 2 * 24px) / 3);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.photo-card .info {
+  display: flex;
+  flex-direction: row;
+  gap: 28px;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.info .img-text {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.info .img-text > span {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
