--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -65,14 +65,23 @@ input {
 }
 
 .loader {
-  transform: rotateZ(45deg);
-  perspective: 1000px;
+  width: 48px;
+  height: 48px;
+  border: 5px solid FFF;
+  border-bottom-color: FF3D00;
   border-radius: 50%;
-  width: 36px;
-  height: 36px;
-  color: #474444;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
-
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .gallery {
   padding: 0;
   display: flex;
